--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : 
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com.au/citations?user=gJJRqlsAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=gJJRqlsAAAAJ&hl=en"
   email            : "mdon0736@uni.sydney.edu.au"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
