--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Minjing Dong"
-  avatar           : "images/profile.png"
+  avatar           : "images/profile_square.png"
   bio              : "AP@CityU"
   location         : "Hong Kong"
   employer         :
